@@ -1,3 +1,7 @@
+Sat Oct 31 21:36:07 PST 1998 Manish Singh <yosh@gimp.org>
+
+	* esddsp.c: don't try to open local sound device if ESPEAKER is set
+
 1998-10-31  Yo Ric Dude  <ricdude@ix.netcom.com>
 
 	* EsounD.html, EsounD.ps, Makefile.am: replaced EsounD.html with
